<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mareu.view.activity.MeetingListActivity">
    <item
        android:id="@+id/toolbar_bt_sort_meeting"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_bt_filter_room_meeting"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_filter_white_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/toolbar_bt_filter_date_meeting"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_filter_white_24dp"
        app:showAsAction="ifRoom" />
</menu>

